@@ -9,7 +9,7 @@ public class OddEven {
 
         List<Integer> ls= Arrays.asList(1,2,3,4,5,6,7,8,9,10);
 
-        List<Integer> even= ls.stream().filter(n->n%2==0).collect(Collectors.toList());
+        List<Integer> even= ls.stream().filter(n->n%2==0).toList();
         System.out.println(even);
 
         List<Integer> odd= ls.stream().filter(n->n%2!=0).collect(Collectors.toList());
